Correction of some bug